Ensure validation errors on `start_at` display
These were not being shown when present and this causes confusion to
the agents when attempting to place appointments.

--- a/app/views/appointments/_availability_calendar.html.erb
+++ b/app/views/appointments/_availability_calendar.html.erb
@@ -1,5 +1,5 @@
 <h2>Choose available slot <%= required_label %></h2>
-<% if @appointment.errors[:guider].any? %>
+<% if @appointment.unable_to_assign? %>
   <%= render 'unable_to_assign' %>
 <% end %>
 
