--- a/app/views/appointments/_unable_to_assign.html.erb
+++ b/app/views/appointments/_unable_to_assign.html.erb
@@ -1,3 +1,3 @@
 <p class="text-danger js-slot-unavailable-message t-slot-unavailable-message">
-  Unable to assign appointment to a slot, please choose a slot.
+  Unable to assign appointment to the chosen slot, please choose another slot.
 </p>
