Add GDPR notices to customer emails

--- a/app/views/appointment_mailer/cancelled.text.erb
+++ b/app/views/appointment_mailer/cancelled.text.erb
@@ -14,3 +14,5 @@ Reference number:
 <%= @appointment.id %>
 
 If you didn't ask us to cancel your appointment or to book a new one, call 0800 138 3944. Please don't reply to this email.
+
+Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at https://www.pensionwise.gov.uk/en/privacy
