--- a/app/views/appointment_mailer/missed.html.erb
+++ b/app/views/appointment_mailer/missed.html.erb
@@ -45,3 +45,7 @@
 <%= p do %>
   To book another appointment, please call 0800 138 3944. Please don’t reply to this email.
 <% end %>
+
+<%= p do %>
+  Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at <a href="https://www.pensionwise.gov.uk/en/privacy/">https://www.pensionwise.gov.uk/en/privacy</a>.
+<% end %>
