--- a/app/views/appointment_mailer/updated.text.erb
+++ b/app/views/appointment_mailer/updated.text.erb
@@ -5,4 +5,7 @@ Dear <%= @appointment.first_name %>,
 Your appointment details have been updated.
 
 <%= render 'shared/email/appointment_details' %>
+
+Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at https://www.pensionwise.gov.uk/en/privacy
+
 <%= render 'shared/email/preparing_for_appointment' %>
