--- a/app/views/appointment_mailer/cancelled.html.erb
+++ b/app/views/appointment_mailer/cancelled.html.erb
@@ -38,3 +38,6 @@
   If you didn’t ask us to cancel your appointment or to book a new one, call 0800 138 3944. Please don’t reply to this email.
 <% end %>
 
+<%= p do %>
+  Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at <a href="https://www.pensionwise.gov.uk/en/privacy/">https://www.pensionwise.gov.uk/en/privacy</a>.
+<% end %>
