--- a/app/views/appointment_mailer/confirmation.text.erb
+++ b/app/views/appointment_mailer/confirmation.text.erb
@@ -5,4 +5,11 @@ Dear <%= @appointment.first_name %>,
 Thank you for booking a Pension Wise phone appointment.
 
 <%= render 'shared/email/appointment_details' %>
+
+Pension Wise collects and stores personal data for the purpose of delivering pensions guidance.
+
+Your data will be shared with our delivery partners only where it is necessary to provide you with Pension Wise guidance.
+
+Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at https://www.pensionwise.gov.uk/en/privacy
+
 <%= render 'shared/email/preparing_for_appointment' %>
