--- a/app/views/appointment_mailer/missed.text.erb
+++ b/app/views/appointment_mailer/missed.text.erb
@@ -18,3 +18,5 @@ Reference number:
 <%= @appointment.id %>
 
 To book another appointment, please call 0800 138 3944. Please don't reply to this email.
+
+Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at https://www.pensionwise.gov.uk/en/privacy
