--- a/app/views/appointment_mailer/reminder.text.erb
+++ b/app/views/appointment_mailer/reminder.text.erb
@@ -5,4 +5,7 @@ Dear <%= @appointment.first_name %>,
 This is a reminder that you have a Pension Wise phone appointment booked for:
 
 <%= render 'shared/email/appointment_details' %>
+
+Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at https://www.pensionwise.gov.uk/en/privacy
+
 <%= render 'shared/email/preparing_for_appointment' %>
