Display missing owner as 'The system'
There are some edge-cases where the auditing 'owner' will be missing.
In these instances we can assume the change was made by 'The system'
and display this accordingly.

--- a/app/views/changes/index.html.erb
+++ b/app/views/changes/index.html.erb
@@ -11,7 +11,7 @@
   <col width="20%" />
   <col width="40%" />
   <col width="40%" />
-  <caption><%= audit.user.name %> changed the <%= audit.changed_fields %> on <%= audit.timestamp %></caption>
+  <caption><%= audit.owner %> changed the <%= audit.changed_fields %> on <%= audit.timestamp %></caption>
   <thead>
     <tr>
       <th>Field</th>
