--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -12,9 +12,16 @@
       <h2>Date of birth</h2>
       <%= render 'shared/date_of_birth_form_field', form: f %>
     </div>
+  </div>
+
+  <hr>
+  <%= render partial: 'personal_details_form', locals: { f: f } %>
+  <hr>
+
+  <div class="row form-group">
     <%= render 'schedule_form', form: f %>
   </div>
-  <%= render partial: 'personal_details_form', locals: { f: f } %>
+
   <div class="row form-group">
     <div class="col-md-12">
       <%= f.submit "Continue", class: 't-preview-appointment' %>
