--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,12 @@
   <% end %>
 <% end %>
 
+<% content_for :content do %>
+  <p class="alert alert-warning"><strong>Notice:</strong> we are currently experiencing difficulties delivering email to <strong>btinternet.com</strong> addresses.</p>
+
+  <%= yield %>
+<% end %>
+
 <% content_for :body_end do %>
   <div data-module="activity-resolve"></div>
   <script>
