Allow agents to specify final-nudge partner
Agents can specify the referring pension provider during the final-nudge
pilot scheme.

--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -38,6 +38,7 @@
   <%= f.hidden_field :town %>
   <%= f.hidden_field :county %>
   <%= f.hidden_field :postcode %>
+  <%= f.hidden_field :pension_provider %>
 
   <div class="t-preview appointment-preview">
     <div class="row">
