--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -74,7 +74,7 @@
           { use_label: false, include_blank: true},
           class: 't-pension-provider form-control'
         %>
-        <div class="help-block">Required for final-nudge pilot appointments</div>
+        <div class="help-block">Required for final-nudge pilot appointments. Otherwise select <i>Not Applicable</i></div>
       </div>
     <% end %>
 
