--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -39,21 +39,28 @@
           { "start": "11:20", "end": "12:30" },
           { "start": "13:30", "end": "14:40" },
           { "start": "14:50", "end": "16:00" }
-        ]'>Early</button>
+        ]'>Shift 1</button>
         <button type="button" class="btn btn-default t-mid" data-events='[
           { "start": "09:30", "end": "10:40" },
           { "start": "10:50", "end": "12:00" },
           { "start": "12:20", "end": "13:30" },
           { "start": "14:30", "end": "15:40" },
           { "start": "15:50", "end": "17:00" }
-        ]'>Mid</button>
+        ]'>Shift 2</button>
         <button type="button" class="btn btn-default" data-events='[
           { "start": "11:00", "end": "12:10" },
           { "start": "12:20", "end": "13:30" },
           { "start": "13:50", "end": "15:00" },
           { "start": "16:00", "end": "17:10" },
           { "start": "17:20", "end": "18:30" }
-        ]'>Late</button>
+        ]'>Shift 3</button>
+        <button type="button" class="btn btn-default" data-events='[
+          { "start": "12:30", "end": "13:40" },
+          { "start": "13:50", "end": "15:00" },
+          { "start": "15:20", "end": "16:30" },
+          { "start": "17:30", "end": "18:40" },
+          { "start": "18:50", "end": "20:00" }
+        ]'>Shift 4</button>
       </div>
     </div>
   </div>
