--- a/app/views/appointment_mailer/cancelled.text.erb
+++ b/app/views/appointment_mailer/cancelled.text.erb
@@ -1,3 +1,5 @@
+If you've cancelled due to the ongoing response to coronavirus you can still explore your pension options: https://www.pensionwise.gov.uk/en/explore-your-options?utm_source=cancellation&utm_medium=email&utm_campaign=tele
+
 We've cancelled your appointment
 
 Dear <%= @appointment.first_name %>,
