--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -58,7 +58,7 @@
         <td class="appointment-search-results__item"><b class="visible-xs-block">Guider</b><span class="js-allow-highlighting"><%= result.guider_name %></span> <small>(<%= result.guider_organisation %>)</small></td>
         <td class="appointment-search-results__item"><b class="visible-xs-block">Appointment Date/Time</b><%= result.date %></td>
         <td class="appointment-search-results__item"><b class="visible-xs-block">Created</b><%= result.created_at %></td>
-        <td class="appointment-search-results__item"><b class="visible-xs-block">Status</b><%= result.status %></td>
+        <td class="appointment-search-results__item"><b class="visible-xs-block">Status</b><%= result.status %> <%= processed_tick(result) %></td>
         <td class="appointment-search-results__item" nowrap="true">
           <%= link_to edit_appointment_path(result), title: 'Edit appointment', class: 'btn btn-info' do %>
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
