--- a/app/views/shared/_date_of_birth_form_field.html.erb
+++ b/app/views/shared/_date_of_birth_form_field.html.erb
@@ -15,6 +15,7 @@
           use_label: false,
           value: form.object.date_of_birth.try(:day),
           placeholder: 'DD',
+          autocomplete: 'off',
           class: 'form-dob__input js-dob-day t-date-of-birth-day',
           pattern: '[0-9]+',
           maxlength: 2,
@@ -33,6 +34,7 @@
           use_label: false,
           value: form.object.date_of_birth.try(:month),
           placeholder: 'MM',
+          autocomplete: 'off',
           class: 'form-dob__input js-dob-month t-date-of-birth-month',
           pattern: '[0-9]+',
           maxlength: 2,
@@ -50,6 +52,7 @@
           use_label: false,
           value: form.object.date_of_birth.try(:year),
           placeholder: 'YYYY',
+          autocomplete: 'off',
           class: 'form-dob__input form-dob__input--year js-dob-year t-date-of-birth-year',
           pattern: '[0-9]+',
           maxlength: 4,
