Third party bookings
Allows agents and others to specify a third party will take the
appointment on behalf of the given customer. When this is specified, the
agent will also be asked to confirm the customer gave their consent.
They can request a printed consent form via notify, or specify power of
attorney. In both instances, they can upload evidence of both.

Resource managers will receive email notification when the third party
option is specified. This is now combined with what was previously the
accessibility adjustments email. A banner will also be displayed when
editing/viewing the appointment.

--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -4,6 +4,12 @@
   { title: "Edit appointment for #{@appointment.name}" }
 ) %>
 
+<% if @appointment.third_party_booking? %>
+  <div class="alert alert-warning t-third-party-booked" role="alert">
+    <p>The appointment was <strong>booked by a third party</strong> on behalf of the customer</p>
+  </div>
+<% end %>
+
 <% if display_dc_pot_unsure_banner?(@appointment) %>
   <div class="alert alert-warning t-dc-pot-unsure" role="alert">
     <p>The customer was <strong>unsure</strong> if they had a DC pension</p>
