Allow TPAS or admins to specify smarter signposts
TPAS or admins can create appointments with the smarter signposting
referral option. This will default to 'false' eg 'no' for other users.

--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -64,6 +64,10 @@
       %>
     </div>
 
+    <% if current_user.tpas? || current_user.administrator? %>
+      <%= f.check_box :smarter_signposted, class: 't-smarter-signposted', label: 'Smarter signposting referral?' %>
+    <% end %>
+
     <%=
       f.select(
         :status,
