--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -38,6 +38,7 @@
   <%= f.hidden_field :town %>
   <%= f.hidden_field :county %>
   <%= f.hidden_field :postcode %>
+  <%= f.hidden_field :smarter_signposted %>
 
   <div class="t-preview appointment-preview">
     <div class="row">
@@ -110,6 +111,12 @@
               <td class="active"><b>Type of appointment</b></td>
               <td><%= @appointment.type_of_appointment.humanize %></td>
             </tr>
+            <% if current_user.tpas? || current_user.administrator? %>
+            <tr>
+              <td class="active"><b>Smarter signposted referral?</b></td>
+              <td><%= @appointment.smarter_signposted? ? 'Yes' : 'No' %></td>
+            </tr>
+            <% end %>
           </tbody>
         </table>
 
