--- a/app/views/shared/email/_preparing_for_appointment.html.erb
+++ b/app/views/shared/email/_preparing_for_appointment.html.erb
@@ -9,17 +9,22 @@
 <ul style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
   <li>
     <%= p do %>
+      what type(s) of pension you have? – ask your pension provider whether you have a defined contribution or a defined benefit pension if you are unsure
+    <% end %>
+  </li>
+  <li>
+    <%= p do %>
       the value of your pension pot(s) — check your pension paperwork or ask your provider
     <% end %>
   </li>
   <li>
     <%= p do %>
-    an estimate of your State Pension — call the Future Pension Centre on 0800 731 0175 for a State Pension statement
+      an estimate of your State Pension — call the Future Pension Centre on 0800 731 0175 for a State Pension statement
     <% end %>
   </li>
   <li>
     <%= p do %>
-    if your pension pot contains any special features, eg a guaranteed annuity rate or a guaranteed pot value at a certain time — ask your provider
+      if your pension pot contains any special features, eg a guaranteed annuity rate or a guaranteed pot value at a certain time — ask your provider
     <% end %>
   </li>
 </ul>
