--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -39,6 +39,7 @@
   <%= f.hidden_field :county %>
   <%= f.hidden_field :postcode %>
   <%= f.hidden_field :smarter_signposted %>
+  <%= f.hidden_field :bsl_video %>
 
   <div class="t-preview appointment-preview">
     <div class="row">
