--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -6,7 +6,7 @@
 
 <% if @appointment.third_party_booking? %>
   <div class="alert alert-warning t-third-party-booked" role="alert">
-    <p>The appointment was <strong>booked by a third party</strong> on behalf of the customer</p>
+    <p>The appointment will be delivered to a <strong>third party</strong> on behalf of the customer</p>
   </div>
 <% end %>
 
