--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -113,7 +113,11 @@
         <% end %>
       </div>
 
-      <%= f.check_box :email_consent_form_required, class: 't-email-consent-form-required' %>
+      <%= f.check_box :email_consent_form_required, class: 't-email-consent-form-required', data: { target: 'email-consent' } %>
+      <div class="col-md-offset-1" id="email-consent">
+        <%= f.text_field :email_consent, autocomplete: 'off', class: 't-email-consent', label: 'Consent email', placeholder: 'A consent form is sent to this email' %>
+      </div>
+
       <%= f.check_box :printed_consent_form_required, class: 't-printed-consent-form-required', data: { target: 'printed-consent' } %>
       <div class="col-md-offset-1" id="printed-consent">
         <h2 class="h4" data-module="postcode-lookup"
