--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -54,6 +54,7 @@
   <%= f.hidden_field :consent_town %>
   <%= f.hidden_field :consent_county %>
   <%= f.hidden_field :consent_postcode %>
+  <%= f.hidden_field :email_consent %>
 
   <div class="t-preview appointment-preview">
     <div class="row">
@@ -127,6 +128,12 @@
               <td class="active"><b>Email consent form required</b></td>
               <td><%= boolean_yes_no(@appointment.email_consent_form_required) %></td>
             </tr>
+            <% if @appointment.email_consent_form_required? %>
+            <tr>
+              <td class="active"><b>Email consent</b></td>
+              <td><%= @appointment.email_consent %></td>
+            </tr>
+            <% end %>
             <tr>
               <td class="active"><b>Printed consent form required</b></td>
               <td><%= boolean_yes_no(@appointment.printed_consent_form_required) %></td>
