Remove wordy text

--- a/app/views/consents/create.html.erb
+++ b/app/views/consents/create.html.erb
@@ -34,9 +34,7 @@ details of our privacy policy can be found at www.pensionwise.gov.uk/en/privacy
 </p>
 
 <p>
-<strong>Before we can deliver an appointment to discuss your pension options, we need
-your authority to deliver a Pension Wise appointment to the third party on your
-behalf.</strong>
+  <strong>Before we can deliver an appointment to discuss your pension options, we need your authority.</strong>
 </p>
 
 <h3>Your details</h3>
