Improve PDF generated content for consent

--- a/app/views/consents/create.html.erb
+++ b/app/views/consents/create.html.erb
@@ -1,22 +1,18 @@
-<h3>Pension Wise Third Party Consent Form</h3>
+<h4>Pension Wise Third Party Consent Form</h4>
 
 <p>
 A third party has asked to book a Pension Wise appointment to discuss your
-pension payment options.
-</p>
-
-<p>
-This form must be completed to ensure that your personal data is not discussed
-or disclosed to anyone without your knowledge. This does not apply to
-circumstances where we are under a legal obligation to disclose your
-information, e.g. for safeguarding.
+pension payment options. This form must be completed to ensure that your
+personal data is not discussed or disclosed to anyone without your knowledge.
+This does not apply to circumstances where we are under a legal obligation to
+disclose your information, e.g. for safeguarding.
 </p>
 
 <p>
 Pension Wise is a free and impartial government service which helps you
 understand your defined contribution pension options. Pension
 Wise telephone appointments are delivered by the Money and Pensions Service,
-Citizens Advice Engand and Wales and Citizens Advice Scotland.
+Citizens Advice England and Wales and Citizens Advice Scotland.
 </p>
 
 <p>
@@ -29,15 +25,14 @@ of health to inform the options we run through with you.
 Your personal data will be securely stored by Pension Wise and our delivery
 partners to monitor quality of service and respond to queries and
 complaints. The call will be recorded and stored securely for a period of 2
-years.<% if @appointment.cas_guider? %> We will also keep a written record of the appointment for 6 years.<% end %> Full
-details of our privacy policy can be found at www.pensionwise.gov.uk/en/privacy
+years.<% if @appointment.cas_guider? %> We will also keep a written record of the appointment for 6 years.<% end %>
 </p>
 
 <p>
   <strong>Before we can deliver an appointment to discuss your pension options, we need your authority.</strong>
 </p>
 
-<h3>Your details</h3>
+<h4>Your details</h4>
 
 <p>
 I give my consent for: _______________________________________ to receive a
