Add further context to consent email

--- a/app/views/appointment_mailer/consent_form.html.erb
+++ b/app/views/appointment_mailer/consent_form.html.erb
@@ -7,6 +7,12 @@
 <% end %>
 
 <%= p do %>
+  Pension Wise is a government backed service which offers free and impartial
+  guidance about your defined contribution pension options. We don’t recommend
+  any products or tell you what to do with your money.
+<% end %>
+
+<%= p do %>
   A third party has asked to book a Pension Wise appointment to discuss your
   pension payment options. We need your authority to deliver a Pension Wise
   appointment to them on your behalf.
@@ -24,9 +30,4 @@
 <%= p do %>
   If you did not ask a third party to discuss your pension options with Pension
   Wise email contact@pensionwise.gov.uk
-<% end %>
-
-<%= p do %>
-  Pension Wise is an impartial government service. We don’t recommend any
-  products or tell you what to do with your money.
 <% end %>
