--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -55,7 +55,9 @@
     <%= f.text_field :postcode, autocomplete: 'off', class: 't-postcode' %>
 
     <h2 class="h3">Additional information and marketing</h2>
-    <%= f.check_box :bsl_video, class: 't-bsl-video', label: 'BSL video appointment?' %>
+    <% if bsl_video_visible?(current_user) %>
+     <%= f.check_box :bsl_video, class: 't-bsl-video', label: 'BSL video appointment?', disabled: bsl_video_disabled?(current_user) %>
+    <% end %>
 
     <% if current_user.tpas? || current_user.administrator? %>
       <%= f.check_box :smarter_signposted, class: 't-smarter-signposted', label: 'Smarter signposting referral?' %>
