--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -61,17 +61,10 @@
     <%= f.text_field :postcode, autocomplete: 'off', class: 't-postcode' %>
 
     <h2 class="h3">Additional information and marketing</h2>
-    <% if bsl_video_visible?(current_user) %>
-     <%= f.check_box :bsl_video, class: 't-bsl-video', label: 'BSL video appointment?', disabled: bsl_video_disabled?(current_user) %>
-    <% end %>
-
-    <% if current_user.tpas? || current_user.administrator? %>
-      <%= f.check_box :smarter_signposted, class: 't-smarter-signposted', label: 'Smarter signposting referral?' %>
-    <% end %>
 
     <%= f.check_box :accessibility_requirements, class: 't-accessibility-requirements', label: 'Do you require an adjustment to access our service?' %>
 
-    <%= f.check_box :third_party_booking, class: 't-third-party-booked', label: 'Third party appointment', data: { target: 'consent' } %>
+    <%= f.check_box :third_party_booking, class: 't-third-party-booked', label: 'Third party appointment?', data: { target: 'consent' } %>
     <div class="col-md-offset-1" id="consent">
       <p><strong>This appointment will be delivered to a third party on behalf of the data subject:</strong></p>
       <div class="form-group">
@@ -142,6 +135,14 @@
         <%= f.text_field :consent_postcode, autocomplete: 'off', class: 't-consent-postcode', label: 'Postcode', placeholder: 'Postcode' %>
       </div>
     </div>
+
+    <% if bsl_video_visible?(current_user) %>
+     <%= f.check_box :bsl_video, class: 't-bsl-video', label: 'BSL video appointment?', disabled: bsl_video_disabled?(current_user) %>
+    <% end %>
+
+    <% if current_user.tpas? || current_user.administrator? %>
+      <%= f.check_box :smarter_signposted, class: 't-smarter-signposted', label: 'Smarter signposting referral?' %>
+    <% end %>
 
     <%= f.text_area :notes, autocomplete: 'off', class: 't-notes js-notes', rows: 6, placeholder: 'Is the customer hard of hearing? Is English their first language? etc.' %>
     <div class="form-group">
