Add scams notice to confirmation and reminder

--- a/app/views/shared/email/_preparing_for_appointment.text.erb
+++ b/app/views/shared/email/_preparing_for_appointment.text.erb
@@ -14,6 +14,10 @@ Think about your financial circumstances in general and plans for retirement, eg
 * when you want to stop working
 * if you want a fixed or flexible income in retirement
 
+Pension scams
+
+Pension scams are on the increase in the UK. A lifetime’s savings can be lost in moments. More information on scams can be found at https://www.pensionwise.gov.uk/en/scams
+
 Coronavirus (COVID-19)
 
 Coronavirus (COVID-19) is a new illness that can affect your lungs and airways. If you think you might have coronavirus or you've been in close contact with someone who has it:
