--- a/app/views/shared/email/_preparing_for_appointment.html.erb
+++ b/app/views/shared/email/_preparing_for_appointment.html.erb
@@ -57,6 +57,16 @@
 </ul>
 
 <h2 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 18px;line-height: 1.111111111;padding: 15px 0;">
+  Pension scams
+</h2>
+
+<%= p do %>
+  Pension scams are on the increase in the UK. A lifetime’s savings can be lost
+  in moments. More information on scams can be found at
+  <a href="https://www.pensionwise.gov.uk/en/scams">www.pensionwise.gov.uk/en/scams</a>.
+<% end %>
+
+<h2 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 18px;line-height: 1.111111111;padding: 15px 0;">
   Coronavirus (COVID-19)
 </h2>
 
