--- a/app/views/shared/email/_preparing_for_appointment.html.erb
+++ b/app/views/shared/email/_preparing_for_appointment.html.erb
@@ -19,7 +19,7 @@
   </li>
   <li>
     <%= p do %>
-      an estimate of your State Pension — call the Future Pension Centre on 0800 731 0175 for a State Pension statement
+      an estimate of your State Pension — call the Future Pension Centre on 0800 731 0175 or <a href="https://www.gov.uk/check-state-pension">use the online service</a> for a State Pension statement
     <% end %>
   </li>
   <li>
