--- a/app/views/shared/email/_preparing_for_appointment.text.erb
+++ b/app/views/shared/email/_preparing_for_appointment.text.erb
@@ -5,6 +5,7 @@ To make the most of your appointment it would be helpful if you know:
 * what type(s) of pension you have? -- ask your pension provider whether you have a defined contribution or a defined benefit pension if you are unsure
 * the value of your pension pot(s) -- check your pension paperwork or ask your provider
 * an estimate of your State Pension -- call the Future Pension Centre on 0800 731 0175 for a State Pension statement
+* an estimate of your State Pension -- call the Future Pension Centre on 0800 731 0175 or use the online service https://www.gov.uk/check-state-pension for a State Pension statement
 * if your pension pot contains any special features, eg a guaranteed annuity rate or a guaranteed pot value at a certain time -- ask your provider
 
 Think about your financial circumstances in general and plans for retirement, eg:
