--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -34,32 +34,52 @@
       <label for="early-slots" aria-hidden="true">Add common slots:</label>
       <div class="btn-group" role="group" aria-label="Add Common Slots" id="calendar-common">
         <button type="button" id="early-slots" class="btn btn-default" data-events='[
-          { "start": "08:30", "end": "09:40" },
-          { "start": "09:50", "end": "11:00" },
-          { "start": "11:20", "end": "12:30" },
-          { "start": "13:30", "end": "14:40" },
-          { "start": "14:50", "end": "16:00" }
+          { "days": [1, 3, 5], "start": "08:10", "end": "09:20" },
+          { "days": [1, 3, 5], "start": "09:40", "end": "10:50" },
+          { "days": [1, 3, 5], "start": "11:10", "end": "12:20" },
+          { "days": [1, 3, 5], "start": "13:20", "end": "14:30" },
+          { "days": [1, 3, 5], "start": "14:50", "end": "16:00" },
+          { "days": [2, 4], "start": "08:30", "end": "09:40" },
+          { "days": [2, 4], "start": "09:50", "end": "11:00" },
+          { "days": [2, 4], "start": "11:20", "end": "12:30" },
+          { "days": [2, 4], "start": "13:30", "end": "14:40" },
+          { "days": [2, 4], "start": "14:50", "end": "16:00" }
         ]'>Shift 1</button>
         <button type="button" class="btn btn-default t-mid" data-events='[
-          { "start": "09:30", "end": "10:40" },
-          { "start": "10:50", "end": "12:00" },
-          { "start": "12:20", "end": "13:30" },
-          { "start": "14:30", "end": "15:40" },
-          { "start": "15:50", "end": "17:00" }
+          { "days": [1, 3, 5], "start": "09:10", "end": "10:20" },
+          { "days": [1, 3, 5], "start": "10:40", "end": "11:50" },
+          { "days": [1, 3, 5], "start": "12:10", "end": "13:20" },
+          { "days": [1, 3, 5], "start": "14:20", "end": "15:30" },
+          { "days": [1, 3, 5], "start": "15:50", "end": "17:00" },
+          { "days": [2, 4], "start": "09:30", "end": "10:40" },
+          { "days": [2, 4], "start": "10:50", "end": "12:00" },
+          { "days": [2, 4], "start": "12:20", "end": "13:30" },
+          { "days": [2, 4], "start": "14:30", "end": "15:40" },
+          { "days": [2, 4], "start": "15:50", "end": "17:00" }
         ]'>Shift 2</button>
         <button type="button" class="btn btn-default" data-events='[
-          { "start": "11:00", "end": "12:10" },
-          { "start": "12:20", "end": "13:30" },
-          { "start": "13:50", "end": "15:00" },
-          { "start": "16:00", "end": "17:10" },
-          { "start": "17:20", "end": "18:30" }
+          { "days": [1, 3, 5], "start": "10:40", "end": "11:50" },
+          { "days": [1, 3, 5], "start": "12:10", "end": "13:20" },
+          { "days": [1, 3, 5], "start": "13:50", "end": "15:00" },
+          { "days": [1, 3, 5], "start": "15:50", "end": "17:00" },
+          { "days": [1, 3, 5], "start": "17:20", "end": "18:30" },
+          { "days": [2, 4], "start": "11:00", "end": "12:10" },
+          { "days": [2, 4], "start": "12:20", "end": "13:30" },
+          { "days": [2, 4], "start": "14:00", "end": "15:10" },
+          { "days": [2, 4], "start": "16:00", "end": "17:10" },
+          { "days": [2, 4], "start": "17:20", "end": "18:30" }
         ]'>Shift 3</button>
         <button type="button" class="btn btn-default" data-events='[
-          { "start": "12:30", "end": "13:40" },
-          { "start": "13:50", "end": "15:00" },
-          { "start": "15:20", "end": "16:30" },
-          { "start": "17:30", "end": "18:40" },
-          { "start": "18:50", "end": "20:00" }
+          { "days": [1, 3, 5], "start": "12:10", "end": "13:20" },
+          { "days": [1, 3, 5], "start": "13:50", "end": "15:00" },
+          { "days": [1, 3, 5], "start": "15:20", "end": "16:30" },
+          { "days": [1, 3, 5], "start": "17:20", "end": "18:30" },
+          { "days": [1, 3, 5], "start": "18:50", "end": "20:00" },
+          { "days": [2, 4], "start": "12:30", "end": "13:40" },
+          { "days": [2, 4], "start": "14:00", "end": "15:10" },
+          { "days": [2, 4], "start": "15:30", "end": "16:40" },
+          { "days": [2, 4], "start": "17:30", "end": "18:40" },
+          { "days": [2, 4], "start": "18:50", "end": "20:00" }
         ]'>Shift 4</button>
       </div>
     </div>
