Temporarily replace the contact@ mailbox address
This is while routing issues for this mailbox are being resolved.

--- a/app/views/appointment_mailer/consent_form.text.erb
+++ b/app/views/appointment_mailer/consent_form.text.erb
@@ -12,7 +12,7 @@ instructions:
 <%= link_to 'Download the consent form', appointment_consent_url(@appointment) %>
 
 If you did not ask a third party to discuss your pension options with Pension
-Wise email contact@pensionwise.gov.uk
+Wise email appointments@pensionwise.gov.uk
 
 Pension Wise is an impartial government service. We don’t recommend any
 products or tell you what to do with your money.
