--- a/app/views/appointment_mailer/consent_form.html.erb
+++ b/app/views/appointment_mailer/consent_form.html.erb
@@ -29,5 +29,5 @@
 
 <%= p do %>
   If you did not ask a third party to discuss your pension options with Pension
-  Wise email contact@pensionwise.gov.uk
+  Wise email appointments@pensionwise.gov.uk
 <% end %>
