--- a/app/views/consents/create.html.erb
+++ b/app/views/consents/create.html.erb
@@ -75,5 +75,5 @@ Protection Act 2018.
 <p>
 Please return the completed form to Pension Wise, PO Box 10404, Ashby de la
 Zouch, Leicestershire, LE65 9EH. Or you can email a scanned copy
-to: appointments@pensionwise.gov.uk
+to: contact@pensionwise.gov.uk
 </p>
