--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -5,7 +5,9 @@
     <%= f.text_field :first_name, autocomplete: 'off', class: 't-first-name', label: required_label(:first_name) %>
     <%= f.text_field :last_name, autocomplete: 'off', class: 't-last-name', label: required_label(:last_name) %>
     <%= f.email_field :email, autocomplete: 'off', class: 't-email' %>
-    <%= f.telephone_field :phone, autocomplete: 'off', class: 't-phone', label: required_label(:phone) %>
+    <%= f.telephone_field :phone, autocomplete: 'off', class: 't-phone', label: required_label(:phone), 
+      help: '<strong>If mobile</strong>: I need to make you aware that in the interest of road safety we will not deliver a Pension Wise appointment if you are driving. This also includes the use of hands-free devices. Please ensure you are not driving at the time of your appointment.'.html_safe
+    %>
     <%= f.telephone_field :mobile, autocomplete: 'off', class: 't-mobile',
       help: 'Pension Wise will use this to send an SMS appointment reminder 7 days and additionally 48 hours before the appointment. Customers can cancel appointments via SMS response.'
     %>
