--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -30,19 +30,7 @@
 
 <% if @appointment.potential_duplicates? %>
   <div class="alert alert-warning" role="alert">
-    <p>
-      This appointment may be a duplicate of:
-    </p>
-    <ul>
-      <% @appointment.potential_duplicates.each do |appointment| %>
-        <li>
-          <%= link_to "##{appointment.id}", edit_appointment_path(id: appointment) %><br>
-          Organisation: <em><%= organisation_name(appointment) %></em><br>
-          Appointment date/time: <em><%= appointment.start_at.to_date.to_s(:govuk_date_short) %>, <%= appointment.start_at.to_s(:govuk_time) %></em><br>
-          Created: <em><%= appointment.created_at.to_date.to_s(:govuk_date_short) %>, <%= appointment.created_at.to_s(:govuk_time) %></em>
-        </li>
-      <% end %>
-    </ul>
+    <p>This appointment <strong><%= link_to 'may be duplicated', appointment_duplicates_path(@appointment) %></strong></p>
   </div>
 <% end %>
 
