--- a/app/views/appointment_mailer/cancelled.html.erb
+++ b/app/views/appointment_mailer/cancelled.html.erb
@@ -11,7 +11,11 @@
 <% end %>
 
 <%= p do %>
-  We have cancelled the following phone appointment as requested:
+  <% if @appointment.cancelled_by_pension_wise? %>
+    We have cancelled the following phone appointment due to unforeseen circumstances. We apologise for any inconvenience this may cause.
+  <% else %>
+    We have cancelled the following phone appointment as requested:
+  <% end %>
 <% end %>
 
 <%= p do %>
@@ -39,7 +43,11 @@
 <% end %>
 
 <%= p do %>
-  If you didn’t ask us to cancel your appointment or to book a new one, call 0800 138 3944. Please don’t reply to this email.
+  <% if @appointment.cancelled_by_pension_wise? %>
+    If we have not contacted you already, we will offer you a new date for your appointment within 1 working day.
+  <% else %>
+    If you didn’t ask us to cancel your appointment or to book a new one, call 0800 138 3944. Please don’t reply to this email.
+  <% end %>
 <% end %>
 
 <%= p do %>
