--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -158,13 +158,17 @@
       %>
     </div>
 
-    <%=
-      f.select(
-        :status,
-        friendly_options(Appointment.statuses),
-        options = {},
-        { class: 't-status' }
-      ) if defined?(edit) && edit
-    %>
+    <% if defined?(edit) && edit %>
+      <%=
+        f.select(
+          :status,
+          friendly_options(Appointment.statuses),
+          {},
+          { class: 't-status', data: { module: 'secondary-status', options: Appointment::SECONDARY_STATUSES.to_json, 'initial-secondary-status' => @appointment.secondary_status } }
+        )
+      %>
+      <%= f.select(:secondary_status, [], {}, { class: 't-secondary-status js-secondary-status' }) %>
+    <% end %>
+
   </div>
 </div>
