Add MoneyHelper messaging to emails

--- a/app/views/appointment_mailer/cancelled.html.erb
+++ b/app/views/appointment_mailer/cancelled.html.erb
@@ -49,3 +49,5 @@
 <%= p do %>
   Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at <a href="https://www.pensionwise.gov.uk/en/privacy/">https://www.pensionwise.gov.uk/en/privacy</a>.
 <% end %>
+
+<%= render 'shared/email/money_helper' %>
