--- a/app/views/appointment_mailer/cancelled.text.erb
+++ b/app/views/appointment_mailer/cancelled.text.erb
@@ -24,3 +24,5 @@ If you didn’t ask us to cancel your appointment or to book a new one, call 080
 <% end %>
 
 Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at https://www.pensionwise.gov.uk/en/privacy
+
+<%= render 'shared/email/money_helper' %>
