--- a/app/views/appointment_mailer/confirmation.text.erb
+++ b/app/views/appointment_mailer/confirmation.text.erb
@@ -12,4 +12,6 @@ Your data will be shared with our delivery partners only where it is necessary t
 
 Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at https://www.pensionwise.gov.uk/en/privacy
 
+<%= render 'shared/email/money_helper' %>
+
 <%= render 'shared/email/preparing_for_appointment' %>
