--- a/app/views/appointment_mailer/updated.html.erb
+++ b/app/views/appointment_mailer/updated.html.erb
@@ -16,4 +16,6 @@
   Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at <a href="https://www.pensionwise.gov.uk/en/privacy/">https://www.pensionwise.gov.uk/en/privacy</a>.
 <% end %>
 
+<%= render 'shared/email/money_helper' %>
+
 <%= render 'shared/email/preparing_for_appointment' %>
