--- a/app/views/appointment_mailer/updated.text.erb
+++ b/app/views/appointment_mailer/updated.text.erb
@@ -8,4 +8,5 @@ Your appointment details have been updated.
 
 Full details of our privacy policy, including information on your rights in relation to the data we hold can be found at https://www.pensionwise.gov.uk/en/privacy
 
+<%= render 'shared/email/money_helper' %>
 <%= render 'shared/email/preparing_for_appointment' %>
